--- a/Day 11/index.html
+++ b/Day 11/index.html
@@ -5,7 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
-    <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/> 
+    <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <style>
+        #result1{
+            color: rgb(97, 0, 71);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: black;
+            border: 2px solid white;
+            margin: 8px;
+            padding: 8px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            border-radius: 20px;
+            align-items: center;
+        }
+        #result{
+            color: rgb(97, 0, 71);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: rgb(233, 194, 194);
+            border: 10px solid rgb(226, 228, 220);
+            margin: 30px;
+            padding: 20px;
+            border-radius: 20px;
+            align-items: center;
+        }
+        .ahref{
+            color: rgb(97, 0, 71);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: rgb(149, 143, 174);
+            border: 4px solid rgb(136, 193, 14);
+            margin: 30px;
+            padding: 8px;
+            text-align: center;
+            align-self: center;
+            border-radius: 20px;
+            align-items: center;
+        }
+        .h1{
+            color: rgb(97, 0, 71);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: rgb(149, 143, 174);
+            border: 4px solid rgb(136, 193, 14);
+            margin: 30px;
+            padding: 8px;
+            text-align: center;
+            align-self: center;
+            border-radius: 20px;
+        }
+        
+    </style> 
 </head>
 <body>
     <br>
@@ -24,7 +78,10 @@
             </button>
         </div>
     </form>
-    <div id="result"></div>
+    <div id="result1">
+        <div id="result"></div>
+    </div>
+    
 </body>
 <script src="index.js"></script>
 </html>
