--- a/Day 11/index.html
+++ b/Day 11/index.html
@@ -11,7 +11,7 @@
             color: rgb(97, 0, 71);
             text-decoration: none;
             font-weight: bold;
-            background-color: black;
+            background-color: rgb(242, 238, 238);
             border: 2px solid white;
             margin: 8px;
             padding: 8px;
@@ -23,6 +23,12 @@
             align-items: center;
         }
         #result{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            border-radius: 20px;
+            align-items: center;
             color: rgb(97, 0, 71);
             text-decoration: none;
             font-weight: bold;
@@ -52,6 +58,30 @@
             font-weight: bold;
             background-color: rgb(149, 143, 174);
             border: 4px solid rgb(136, 193, 14);
+            margin: 30px;
+            padding: 8px;
+            text-align: center;
+            align-self: center;
+            border-radius: 20px;
+        }
+        .div{
+            color: rgb(97, 0, 71);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: rgb(149, 143, 174);
+            border: 4px solid rgb(136, 193, 14);
+            margin: 30px;
+            padding: 8px;
+            text-align: center;
+            align-self: center;
+            border-radius: 20px;
+        }
+        .date{
+            color: rgb(201, 28, 155);
+            text-decoration: none;
+            font-weight: bold;
+            background-color: rgb(163, 154, 198);
+            border: 4px solid rgb(1, 1, 1);
             margin: 30px;
             padding: 8px;
             text-align: center;
